process sonar issues